--- a/InternetBankingApp/Views/User/Login.cshtml
+++ b/InternetBankingApp/Views/User/Login.cshtml
@@ -27,7 +27,7 @@
                             <h4><i class="fa-solid fa-piggy-bank"></i></h4>
                         </div>
 
-                        <form method="post" asp-controller="User" asp-action="Index">
+                        <form method="post" asp-controller="User" asp-action="Login">
                             <div class="mb-2">
                                 <input asp-for="Email" class="form-control" placeholder="Email" />
                             </div>
