--- a/InternetBankingApp/Views/Shared/_Layout.cshtml
+++ b/InternetBankingApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,14 @@
-﻿<!DOCTYPE html>
+﻿@using InternetBankingApp.Core.Application.Dtos.Account
+@using Microsoft.AspNetCore.Http;
+@using InternetBankingApp.Core.Application.Helpers;
+@using InternetBankingApp.Core.Application.ViewModels.User;
+@inject IHttpContextAccessor httpContext;
+
+@{
+    AuthenticationResponse admnin = httpContext.HttpContext.Session.get<AuthenticationResponse>("Admin");
+}
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -19,12 +29,25 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
+                     <!--   <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                           </li>-->
+                        @if(admnin != null)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Home</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Administrator" asp-action="UsersManagement">
+                                    Users Management
+                                </a>
+                            </li>
+                           
+                        }
                     </ul>
                 </div>
             </div>
