--- a/InternetBankingApp/Views/Administrator/UsersManagement.cshtml
+++ b/InternetBankingApp/Views/Administrator/UsersManagement.cshtml
@@ -6,4 +6,4 @@
 
 <h1>UsersManagement</h1>
 
-@await Html.PartialAsync("CreateUser", new InternetBankingApp.Core.Application.ViewModels.User.RegisterViewModel())
+@* @await Html.PartialAsync("CreateUser", new InternetBankingApp.Core.Application.ViewModels.User.RegisterViewModel()) *@
