--- a/InternetBankingApp/Views/Administrator/Index.cshtml
+++ b/InternetBankingApp/Views/Administrator/Index.cshtml
@@ -42,6 +42,7 @@
 
                                         <td align="center">
                                             <a asp-controller="Patient" asp-action="Edit" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i></a>
+                                            <a asp-controller="Patient" asp-action="Edit" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i></a>
                                             <a asp-controller="Patient" asp-action="Delete" class="btn btn-danger"><i class="fa-solid fa-delete-left"></i></a>
                                         </td>
                                     </tr>
