--- a/InternetBankingApp/Views/Administrator/CreateUser.cshtml
+++ b/InternetBankingApp/Views/Administrator/CreateUser.cshtml
@@ -4,7 +4,6 @@
     
 }
 
-<h1>CreateUser</h1>
 
 <section>
      <button type="button" class="btn btn-primary mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="mdo">Create User</button>
@@ -85,7 +84,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary">Post</button>
+                            <button type="submit" class="btn btn-primary">Send</button>
 
                         </div>
                         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
