--- a/InternetBankingApp/Views/Administrator/Index.cshtml
+++ b/InternetBankingApp/Views/Administrator/Index.cshtml
@@ -43,11 +43,11 @@
                                         <td align="center">
                                             @if(item.IsActive == true)
                                             {
-                                                <a asp-controller="Administrator" asp-action="InactiveUser" asp-route-userId="@item.Id"><i class="fa-solid fa-toggle-on"></i></a>
+                                                <a asp-controller="Administrator" asp-action="InactiveUser" asp-route-userId="@item.Id" class="btn btn-primary"><i class="fa-solid fa-toggle-on"></i></a>
                                             }
                                             else if(item.IsActive == false)
                                             {
-                                                <a asp-controller="Administrator" asp-action="ConfirnUser" asp-route-UserId="@item.Id" class="btn btn-secondary"><i class="fa-solid fa-toggle-off"></i></a>
+                                                <a asp-controller="Administrator" asp-action="ActiveUser" asp-route-UserId="@item.Id" class="btn btn-secondary"><i class="fa-solid fa-toggle-off"></i></a>
                                             } 
 
                                             <a asp-controller="Patient" asp-action="Edit" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i></a>
