Agregando nuevo icono y color al login

--- a/InternetBankingApp/Views/User/Login.cshtml
+++ b/InternetBankingApp/Views/User/Login.cshtml
@@ -24,18 +24,18 @@
                             }
                         }
                         <div class="text-center">
-                            <h4><i class="fa-solid fa-piggy-bank"></i></h4>
+                            <h4><i class="fa-brands fa-paypal" style="color: #0866ff;"></i></h4>
                         </div>
 
                         <form method="post" asp-controller="User" asp-action="Login">
                             <div class="mb-2">
-                                <input asp-for="Email" class="form-control" placeholder="Email" />
+                                <input asp-for="Email" class="form-control" placeholder="Enter your email" />
                             </div>
                             <div class="mb-2">
-                                <input asp-for="Password" class="form-control" placeholder="Password" />
+                                <input asp-for="Password" class="form-control" placeholder="Enter your password" />
                             </div>
                             <div class="d-grid gap-2 ">
-                                <button class="btn text-white fw-bold" style="background-color:#0866ff">Login</button>
+                                <button class="btn text-white fw-bold border-1" style="background-color:#0866ff">Login</button>
                             </div>
                         </form>
                     </div>
