--- a/InternetBankingApp/Views/Administrator/Index.cshtml
+++ b/InternetBankingApp/Views/Administrator/Index.cshtml
@@ -2,12 +2,18 @@
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var usersActive = @ViewBag.UserActive;
+
+    var usersInactive = @ViewBag.UserInactive;
 }
 
 
 <body>
     <div class="col-md-12 col-md-offset-1 justify-content-center align-content-center">
 
+        <h3>@usersActive</h3>
+
+        <h3>@usersInactive</h3>
 
         <div class="mb-3">
             @await Html.PartialAsync("CreateUser", new InternetBankingApp.Core.Application.ViewModels.User.RegisterViewModel())
