--- a/InternetBankingApp/Views/Administrator/UsersManagement.cshtml
+++ b/InternetBankingApp/Views/Administrator/UsersManagement.cshtml
@@ -5,3 +5,61 @@
 }
 
 @* @await Html.PartialAsync("CreateUser", new InternetBankingApp.Core.Application.ViewModels.User.RegisterViewModel()) *@
+
+<body>
+    <div class="col-md-12 col-md-offset-1 justify-content-center align-content-center">
+
+        <div class="mb-3">
+            @await Html.PartialAsync("CreateUser", new InternetBankingApp.Core.Application.ViewModels.User.RegisterViewModel())
+        </div>
+
+        <div>
+            <form method="post">
+                <div class="justify-content-center">
+                    <div class="col-auto">
+                        <table class="table table-striped table-bordered table-list" style="background-color: #ffffff">
+                            <thead class="text-center">
+                                <tr>
+                                    <th>Name</th>
+                                    <th>Last Name</th>
+                                    <th>Email</th>
+                                    <th>UserName</th>
+                                    <th>TypeOfUser</th>
+                                    <th>Active</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+                            @foreach (var item in Model)
+                            {
+                                <tbody class="text-center" style="background-color: #fff0f3">
+                                    <tr>
+                                        <td>@item.FirstName</td>
+                                        <td>@item.LastName</td>
+                                        <td>@item.Email</td>
+                                        <td>@item.UserName</td>
+                                        <td>@item.TypeOfUser</td>
+                                        <td>@item.IsActive</td>
+
+                                        <td align="center">
+                                            @if (item.IsActive == true)
+                                            {
+                                                <a asp-controller="Administrator" asp-action="InactiveUser" asp-route-userId="@item.Id" class="btn btn-primary"><i class="fa-solid fa-toggle-on"></i></a>
+                                            }
+                                            else if (item.IsActive == false)
+                                            {
+                                                <a asp-controller="Administrator" asp-action="ActiveUser" asp-route-UserId="@item.Id" class="btn btn-secondary"><i class="fa-solid fa-toggle-off"></i></a>
+                                            }
+
+                                            <a asp-controller="Patient" asp-action="Edit" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i></a>
+                                            <a asp-controller="Patient" asp-action="Delete" class="btn btn-danger"><i class="fa-solid fa-delete-left"></i></a>
+                                        </td>
+                                    </tr>
+                                </tbody>
+                            }
+                        </table>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+</body>
