--- a/InternetBankingApp/Views/Shared/_Layout.cshtml
+++ b/InternetBankingApp/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                             @if (admnin != null)
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Home</a>
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Administrator" asp-action="Index">Home</a>
                                 </li>
 
                                 <li class="nav-item">
