nuevo diseno de vista del home.

--- a/InternetBankingApp/Views/Administrator/CreateUser.cshtml
+++ b/InternetBankingApp/Views/Administrator/CreateUser.cshtml
@@ -5,7 +5,7 @@
 
 
 <section>
-     <button type="button" class="btn btn-primary mt-3" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="mdo">Create User</button>
+    <button type="button" class="btn mt-3 text-white" style="background: #023e8a" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="mdo">Create User</button>
     @Html.ValidationSummary(false, "", new { @class = "text-danger" })
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
