--- a/InternetBankingApp/Views/Administrator/UsersManagement.cshtml
+++ b/InternetBankingApp/Views/Administrator/UsersManagement.cshtml
@@ -43,7 +43,7 @@
                                         <td align="center">
                                             @if (item.IsActive == true)
                                             {
-                                                <a asp-controller="Administrator" asp-action="InactiveUser" asp-route-userId="@item.Id" class="btn btn-primary"><i class="fa-solid fa-toggle-on"></i></a>
+                                                <a asp-controller="Administrator" asp-action="InactiveUser" asp-route-userId="@item.Id" class="btn text-white" style="background: #023e8a"><i class="fa-solid fa-toggle-on"></i></a>
                                             }
                                             else if (item.IsActive == false)
                                             {
@@ -52,12 +52,12 @@
 
                                             @if (item.TypeOfUser == "Customer")
                                             {
-                                                <a asp-route-userId="@item.Id" asp-controller="Customer" asp-action="EditUser" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i></a>
+                                                <a asp-route-userId="@item.Id" asp-controller="Customer" asp-action="EditUser" class="btn text-white" style="background: #023e8a"><i class="fa-solid fa-pen-to-square"></i></a>
                                             }
 
                                             @if (item.TypeOfUser == "Admin")
                                             {
-                                                <a asp-route-userId="@item.Id" class="btn btn-primary"><i class="fa-solid fa-pen-to-square"></i></a>
+                                                <a asp-route-userId="@item.Id" class="btn text-white" style="background: #023e8a"><i class="fa-solid fa-pen-to-square"></i></a>
                                             }
 
                                         </td>
