--- a/InternetBankingApp/Views/Shared/_Layout.cshtml
+++ b/InternetBankingApp/Views/Shared/_Layout.cshtml
@@ -24,31 +24,27 @@
     <header>
         @if(admnin != null)
         {
-            <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+            <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3" style="background: #023e8a">
                 <div class="container-fluid">
-                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">InternetBankingApp</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+@*                     <a class="navbar-brand text-white justify-content-center align-content-center" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa-solid fa-building-columns"></i></a>
+ *@                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                        <ul class="navbar-nav flex-grow-1">
-                            <!--   <li class="nav-item">
-                                   <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                               </li>
-                               <li class="nav-item">
-                                   <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                                  </li>-->
+                        <ul class="navbar-nav flex-grow-1 justify-content-center align-content-center">
+                          
                             @if (admnin != null)
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Administrator" asp-action="Index">Home</a>
+                                    <a class="nav-link text-white justify-content-center align-content-center"><i class="fa-solid fa-building-columns"></i></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Administrator" asp-action="Index">Home</a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-area="" asp-controller="Administrator" asp-action="UsersManagement">
-                                        Users Management
-                                    </a>
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Administrator" asp-action="UsersManagement">Users Management</a>
                                 </li>
                             }
                         </ul>
@@ -68,7 +64,7 @@
         @if(admnin != null )
         {
             <div class="container">
-                &copy; 2024 - InternetBankingApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                &copy; 2024 - InternetBankingApp
             </div>
         }
         
