--- a/InternetBankingApp/Views/Administrator/Index.cshtml
+++ b/InternetBankingApp/Views/Administrator/Index.cshtml
@@ -12,13 +12,14 @@
     <div class="tabular">
         <div class="card-container">
             <div class="card--wrapper">
-                <div class="card--seguidores" style="background: #0077b6">
+                <div class="card--seguidores" style="background: #023e8a">
                     <div class="card--header">
                         <div class="amount--seguidores">
                             <span class="title">Active User</span>
                             <div class="followers-count">@usersActive</div>
                         </div>
-                        <i class="fa-solid fa-check icon"></i>
+
+                        <i class="fa-solid fa-user-check icon"></i>
                     </div>
                 </div>
                 <div class="card--seguidores" style="background: #023e8a">
@@ -27,7 +28,41 @@
                             <span class="title">Inactive User</span>
                             <div class="followers-count">@usersInactive</div>
                         </div>
-                        <i class="fa-solid fa-xmark icon"></i>
+                        <i class="fa-solid fa-user-xmark icon"></i>
+                    </div>
+                </div>
+                <div class="card--seguidores" style="background: #023e8a">
+                    <div class="card--header">
+                        <div class="amount--seguidores">
+                            <span class="title">Pay Today</span>
+                            <div class="followers-count">0</div>
+                           
+                            <span class="title">Pay Initial</span>
+                            <div class="followers-count">0</div>
+                        </div>
+                        <i class="fa-solid fa-money-bill icon"></i>
+                    </div>
+                </div>
+                <div class="card--seguidores" style="background: #023e8a">
+                    <div class="card--header">
+                        <div class="amount--seguidores">
+                            <span class="title">Transation Today</span>
+                            <div class="followers-count">0</div>
+
+                            <span class="title">Trasantion Initial</span>
+                            <div class="followers-count">0</div>
+                        </div>
+                        <i class="fa-solid fa-money-bill-transfer icon"></i>
+                    </div>
+                </div>
+
+                <div class="card--seguidores" style="background: #023e8a">
+                    <div class="card--header">
+                        <div class="amount--seguidores">
+                            <span class="title">Productos Asignados</span>
+                            <div class="followers-count">0</div>
+                        </div>
+                        <i class="fa-solid fa-address-card icon"></i>
                     </div>
                 </div>
             </div>
