--- a/InternetBankingApp/Views/Shared/_Layout.cshtml
+++ b/InternetBankingApp/Views/Shared/_Layout.cshtml
@@ -53,17 +53,17 @@
             </nav>
         } 
     </header>
-    <div class="container">
+    <div class="container" >
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="background: #023e8a">
 
         @if(admnin != null )
         {
-            <div class="container">
+            <div class="container text-white">
                 &copy; 2024 - InternetBankingApp
             </div>
         }
