--- a/InternetBankingApp/Views/Administrator/UsersManagement.cshtml
+++ b/InternetBankingApp/Views/Administrator/UsersManagement.cshtml
@@ -53,6 +53,8 @@
                                             @if (item.TypeOfUser == "Customer")
                                             {
                                                 <a asp-route-userId="@item.Id" asp-controller="Customer" asp-action="EditUser" class="btn text-white" style="background: #023e8a"><i class="fa-solid fa-pen-to-square"></i></a>
+
+                                                <a asp-route-userId="@item.Id" asp-controller="Customer" asp-action="AddProduct" class="btn text-white" style="background: #023e8a"><i class="fa-brands fa-product-hunt"></i></a>
                                             }
 
                                             @if (item.TypeOfUser == "Admin")
