--- a/InternetBankingApp/Views/Customer/AddProduct.cshtml
+++ b/InternetBankingApp/Views/Customer/AddProduct.cshtml
@@ -5,20 +5,46 @@
 
 
 }
-<form asp-controller="Customer" asp-action="AddCuentaAhorro" class="form" method="post">
+@* <form asp-controller="Customer" asp-action="AddCuentaAhorro" class="form" method="post">
     <select name="" id="" class="select-productos">
    
         <option selected value="1">Cuenta de Ahorro</option>
         <option value="2">Tarjeta de Credito</option>
         <option value="3">Prestamo</option>
     </select>
-
-    <input  name="Balance" placeholder="Balance" />
-
-    <input type="hidden" name="userId" value="@Model"/>
-
-    <button type="submit">Enviar</button>
 </form>
+ *@
+
+<div class="row">
+    <div class="container">
+        <div class="justify-content-center">
+            <div class="col-4 offset-4 mt-5">
+                <div class="card-header text-white text-center" style="background: #023e8a">
+                    <i class="fa-solid fa-credit-card"></i>
+                </div>
+                <div class="card-body">
+                    <form asp-controller="Customer" asp-action="AddCuentaAhorro" class="form" method="post">
+
+                        <div class="mb-3">
+                            <select name="" id="" class="select-productos form-select">
+                                <option selected value="1">Cuenta de Ahorro</option>
+                                <option value="2">Tarjeta de credito</option>
+                                <option value="3" selected="selected">Prestamo</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <input class="form-control" name="Balance" placeholder="$$$" />
+                        </div>
+
+                        <input type="hidden" name="userId" value="@Model" />
+
+                        <button type="submit" class="btn text-white justify-content-end" style="background: #023e8a">Guardar</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <script>
     const selecProductos = document.querySelector('.select-productos')
