--- a/InternetBankingApp/Views/Administrator/Index.cshtml
+++ b/InternetBankingApp/Views/Administrator/Index.cshtml
@@ -57,6 +57,7 @@
                     </div>
                 </div>
 
+                @* Al hacer click en este Div se debe redigidar a una vista con todos los productos *@
                 <div class="card--seguidores" style="background: #023e8a">
                     <div class="card--header">
                         <div class="amount--seguidores">
