--- a/InternetBankingApp/Views/Shared/_Layout.cshtml
+++ b/InternetBankingApp/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
 </head>
 <body>
     <header>
-        @if(admin == true)
+        @if(admin == true || client == true)
         {
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3" style="background: #023e8a">
                 <div class="container-fluid">
@@ -49,6 +49,39 @@
 
                                 <li class="nav-item">
                                     <a class="nav-link text-white" asp-area="" asp-controller="Administrator" asp-action="UsersManagement">Users Management</a>
+                                </li>
+                            }
+                            @if (client == true)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-white justify-content-center align-content-center"><i class="fa-solid fa-building-columns"></i></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Customer" asp-action="Index">Home</a>
+                                </li>
+
+                                <li class="nav-item">
+                                    <div class="dropdown">
+                                        <a class="nav-link text-white dropdown-toggle" asp-area="" asp-controller="Customer" asp-action="Index"  role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                                            Pagos
+                                        </a>
+
+                                        <ul class="dropdown-menu" style="background: #023e8a" aria-labelledby="dropdownMenuLink">
+                                            <li><a class=" nav-link text-white dropdown-item" asp-controller="" asp-action="">Expreso</a></li>
+                                            <li><a class=" nav-link text-white dropdown-item" asp-controller="" asp-action="">Tarjeta Credito</a></li>
+                                            <li><a class=" nav-link text-white dropdown-item" asp-controller="" asp-action="">Prestamos</a></li>
+                                            <li><a class=" nav-link text-white dropdown-item" asp-controller="" asp-action="">Beneficiarios</a></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Customer" asp-action="Index">Beneficiarios</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Customer" asp-action="Index">Avance Efectivo</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="Customer" asp-action="Index">Trasnferencia</a>
                                 </li>
                             }
                         </ul>
