--- a/InternetBankingApp/Views/Customer/Index.cshtml
+++ b/InternetBankingApp/Views/Customer/Index.cshtml
@@ -3,52 +3,95 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<div class="main--content">
+    <div class="tabular">
+        <div class="card-container">
+            <div class="card--wrapper">
+                @foreach (var item in Model)
+                {
+                    
+                    @foreach (var cuentas in item.cuentas)
+                    {
+                        @if(cuentas.Main == true)
+                        {
+                            <div class="card--seguidores" style="background: #023e8a">
+                                <div class="card--header">
+                                    <div class="amount--seguidores">
+                                        <span class="title">Cuentas de Ahorro Primaria</span>
 
-<body>
-    <div class="col-md-12 col-md-offset-1 justify-content-center align-content-center">
+                                        <div class="followers-count">
 
-       
-        <div>
-            <form method="post">
-                <div class="justify-content-center">
-                    <div class="col-auto">
-                        <table class="table table-striped table-bordered table-list" style="background-color: #ffffff">
-                            <thead class="text-center">
-                                <tr>
-                                    <th>Cuenta de Ahorro</th>
-                                    <th>Tarjeta de Credito</th>
-                                    <th>Prestamo</th>
-                                </tr>
-                            </thead>
-                            @foreach (var item in Model)
-                            {
-                                <tbody class="text-center" style="background-color: #fff0f3">
-                                    <tr>
-                                        @foreach(var cuentas in item.cuentas)
-                                        {
-                                           <td><span class="fw-bolf">Saldo: </span> @cuentas.Balance </td>
-                                        }
+                                            @cuentas.Balance
 
-                                        @foreach (var tarjetas in item.tarjetas)
-                                        {
-                                           <td><span class="fw-bolf">Valor a deber: </span> @tarjetas.Debt </td>
-                                        }
+                                        </div>
 
-                                        @foreach (var prestamos in item.prestamos)
-                                        {
-                                            <td><span class="fw-bolf">Valor a deber: </span> @prestamos.CurrentDebt </td>
-                                        }
-                                     
-                                        
-                                    </tr>
-                                </tbody>
-                            }
-                        </table>
+                                    </div>
+
+                                    <i class="fa-solid fa-user-check icon"></i>
+                                </div>
+                            </div>
+                        }
+                        else
+                        {
+                            <div class="card--seguidores" style="background: #023e8a">
+                                <div class="card--header">
+                                    <div class="amount--seguidores">
+                                        <span class="title">Cuentas de Ahorro</span>
+
+                                        <div class="followers-count">
+
+                                            @cuentas.Balance
+
+                                        </div>
+
+                                    </div>
+
+                                    <i class="fa-solid fa-user-check icon"></i>
+                                </div>
+                            </div>
+                        }
+
+
+                }
+                    <div class="card--seguidores" style="background: #023e8a">
+                        <div class="card--header">
+                            <div class="amount--seguidores">
+                                <span class="title">Tarjeta Credito</span>
+
+                                <div class="followers-count">
+                                    @foreach (var tarjetas in item.tarjetas)
+                                    {
+                                        @tarjetas.Debt
+
+                                    }
+                                </div>
+
+                            </div>
+
+                            <i class="fa-solid fa-user-check icon"></i>
+                        </div>
                     </div>
-                </div>
-            </form>
+
+                    <div class="card--seguidores" style="background: #023e8a">
+                        <div class="card--header">
+                            <div class="amount--seguidores">
+                                <span class="title">Prestamo</span>
+
+                                <div class="followers-count">
+                                    @foreach (var prestamo in item.prestamos)
+                                    {
+                                        @prestamo.CurrentDebt
+                                    }
+                                </div>
+                            </div>
+
+                            <i class="fa-solid fa-user-check icon"></i>
+                        </div>
+                    </div>
+                }
+            </div>
         </div>
     </div>
-</body>
+</div>
 
 
