Se agrego boton de deslogueo y algunos disenos en la app.

--- a/InternetBankingApp/Views/Shared/_Layout.cshtml
+++ b/InternetBankingApp/Views/Shared/_Layout.cshtml
@@ -26,18 +26,18 @@
 </head>
 <body>
     <header>
-        @if(admin == true || client == true)
+        @if(user != null)
         {
             <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3" style="background: #023e8a">
                 <div class="container-fluid">
-@*                     <a class="navbar-brand text-white justify-content-center align-content-center" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa-solid fa-building-columns"></i></a>
- *@                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                            aria-expanded="false" aria-label="Toggle navigation">
+                    @*                     <a class="navbar-brand text-white justify-content-center align-content-center" asp-area="" asp-controller="Home" asp-action="Index"><i class="fa-solid fa-building-columns"></i></a>
+                *@                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                                                  aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                         <ul class="navbar-nav flex-grow-1 justify-content-center align-content-center">
-                          
+
                             @if (admin == true)
                             {
                                 <li class="nav-item">
@@ -49,6 +49,9 @@
 
                                 <li class="nav-item">
                                     <a class="nav-link text-white" asp-area="" asp-controller="Administrator" asp-action="UsersManagement">Users Management</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="User" asp-action="LogOut"><i class="fa-solid fa-right-from-bracket"></i></a>
                                 </li>
                             }
                             @if (client == true)
@@ -62,7 +65,7 @@
 
                                 <li class="nav-item">
                                     <div class="dropdown">
-                                        <a class="nav-link text-white dropdown-toggle" asp-area="" asp-controller="Customer" asp-action="Index"  role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <a class="nav-link text-white dropdown-toggle" asp-area="" asp-controller="Customer" asp-action="Index" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                                             Pagos
                                         </a>
 
@@ -83,12 +86,17 @@
                                 <li class="nav-item">
                                     <a class="nav-link text-white" asp-area="" asp-controller="Customer" asp-action="Index">Trasnferencia</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" asp-area="" asp-controller="User" asp-action="LogOut"><i class="fa-solid fa-right-from-bracket"></i></a>
+                                </li>
                             }
                         </ul>
                     </div>
                 </div>
             </nav>
-        } 
+               
+        }
+        
     </header>
     <div class="container" >
         <main role="main" class="pb-3">
@@ -98,7 +106,7 @@
 
     <footer class="border-top footer text-muted" style="background: #023e8a">
 
-        @if(admin != false )
+        @if(user != null )
         {
             <div class="container text-white">
                 &copy; 2024 - InternetBankingApp
