--- a/InternetBankingApp/Views/Customer/Index.cshtml
+++ b/InternetBankingApp/Views/Customer/Index.cshtml
@@ -17,7 +17,7 @@
                             <div class="card--seguidores" style="background: #023e8a">
                                 <div class="card--header">
                                     <div class="amount--seguidores">
-                                        <span class="title">Cuentas de Ahorro Primaria</span>
+                                        <span class="titleCuentaPrimaria">Cuentas de Ahorro Primaria</span>
 
                                         <div class="followers-count">
 
