Cambios en las vista de AddProduct en el Index de Clientes

--- a/InternetBankingApp/Views/Customer/AddProduct.cshtml
+++ b/InternetBankingApp/Views/Customer/AddProduct.cshtml
@@ -37,7 +37,7 @@
                         </div>
 
                         <input type="hidden" name="userId" value="@Model" />
-                        <div>
+                        <div class="d-flex justify-content align-content flex-sm-row-reverse"  style="gap:20px;">
 
                             <button type="submit" class="btn text-white justify-content-end float-end" style="background: #023e8a">Create</button>
 
