--- a/InternetBankingApp/Views/Shared/_Layout.cshtml
+++ b/InternetBankingApp/Views/Shared/_Layout.cshtml
@@ -73,12 +73,12 @@
                                             <li><a class=" nav-link text-white dropdown-item" asp-controller="" asp-action="">Expreso</a></li>
                                             <li><a class=" nav-link text-white dropdown-item" asp-controller="" asp-action="">Tarjeta Credito</a></li>
                                             <li><a class=" nav-link text-white dropdown-item" asp-controller="" asp-action="">Prestamos</a></li>
-                                            <li><a class=" nav-link text-white dropdown-item" asp-controller="" asp-action="">Beneficiarios</a></li>
+                                            <li><a class=" nav-link text-white dropdown-item" asp-route-userId="@user.Id" asp-controller="Customer" asp-action="Beneficiary">Beneficiarios</a></li>
                                         </ul>
                                     </div>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" asp-area="" asp-controller="Customer" asp-action="Index">Beneficiarios</a>
+                                    <a class="nav-link text-white" asp-area="" asp-route-userId="@user.Id" asp-controller="Customer" asp-action="Beneficiary">Beneficiarios</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-white" asp-area="" asp-controller="Customer" asp-action="Index">Avance Efectivo</a>
