Terminacion de Pagos expreso y pagos de Beneficiarios

--- a/InternetBankingApp/Views/Customer/PagoExpreso.cshtml
+++ b/InternetBankingApp/Views/Customer/PagoExpreso.cshtml
@@ -40,7 +40,7 @@
 
 
         <div class="d-flex  justify-content-end align-items-end " style="gap:10px ;">
-            <a asp-controller="Citas" asp-action="Index" class="btn btn-danger  font-weight-bold  ">Cancelar</a>
+            <a asp-controller="Customer" asp-action="Index" asp-route-userId="@user.Id" class="btn btn-danger  font-weight-bold  ">Cancelar</a>
             <button type="submit" class="btn btn-primary font-weight-bold">Pagar</button>
 
 
