--- a/InternetBankingApp/Views/Shared/_Layout.cshtml
+++ b/InternetBankingApp/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
                                             <li><a class=" nav-link text-white dropdown-item" asp-route-userId="@user.Id" asp-controller="Customer" asp-action="PagoExpreso">Expreso</a></li>
                                             <li><a class=" nav-link text-white dropdown-item" asp-controller="" asp-action="">Tarjeta Credito</a></li>
                                             <li><a class=" nav-link text-white dropdown-item" asp-controller="" asp-action="">Prestamos</a></li>
-                                            <li><a class=" nav-link text-white dropdown-item" asp-route-userId="@user.Id" asp-controller="Customer" asp-action="Beneficiary">Beneficiarios</a></li>
+                                            <li><a class=" nav-link text-white dropdown-item" asp-route-userId="@user.Id" asp-controller="Customer" asp-action="PagoBeneficiarios">Beneficiarios</a></li>
                                         </ul>
                                     </div>
                                 </li>
